--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "prop-types": "^15.6.0",
     "react": "^16.0.0-beta.5",
     "react-native": "^0.49.3",
+    "react-native-i18n": "^2.0.9",
     "react-native-router-flux": "^4.0.0-beta.22",
     "react-native-vector-icons": "^4.4.2",
     "react-navigation": "1.0.0-beta.15",
@@ -58,6 +59,7 @@
     "babel-core": "^6.9.0",
     "babel-eslint": "^8.0.1",
     "babel-jest": "^21.2.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.9.0",
     "babel-preset-react-native": "^4.0.0",
     "babel-preset-stage-0": "^6.5.0",
