--- a/package.json
+++ b/package.json
@@ -32,28 +32,21 @@
     ]
   },
   "dependencies": {
-    "bluebird": "^3.3.5",
     "event-emitter": "^0.3.4",
-    "immutable": "^3.7.6",
-    "lodash": "^4.11.0",
     "mobx-persist": "^0.3.4",
     "mobx-react": "^4.3.3",
+    "mobx-remotedev": "^0.2.8",
     "mobx-state-tree": "^1.1.0",
     "moment": "^2.12.0",
     "prop-types": "^15.6.0",
     "react": "^16.0.0-beta.5",
     "react-native": "^0.49.3",
+    "react-native-button": "^2.1.0",
     "react-native-i18n": "^2.0.9",
     "react-native-router-flux": "^4.0.0-beta.22",
     "react-native-vector-icons": "^4.4.2",
-    "react-navigation": "1.0.0-beta.15",
-    "react-redux": "^5.0.6",
-    "redux": "^3.4.0",
-    "redux-logger": "^3.0.6",
-    "redux-loop-symbol-ponyfill": "^2.2.0",
-    "redux-promise": "^0.5.3",
-    "redux-thunk": "^2.0.1",
-    "standard-http-error": "^2.0.0"
+    "standard-http-error": "^2.0.0",
+    "tcomb-form-native": "^0.6.11"
   },
   "devDependencies": {
     "babel-core": "^6.9.0",
