--- a/package.json
+++ b/package.json
@@ -60,13 +60,18 @@
     "enzyme": "^3.0.0",
     "enzyme-adapter-react-16": "^1.0.2",
     "eslint": "^4.10.0",
+    "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-babel": "^4.1.2",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": "^7.4.0",
     "fetch-mock": "^5.5.0",
     "istanbul": "1.0.0-alpha.2",
     "jest": "^21.2.1",
     "mst-middlewares": "^1.1.0",
     "plop": "^1.7.4",
+    "prettier": "^1.7.4",
     "react-addons-test-utils": "^15.4.2",
     "react-dom": "^16.0.0",
     "react-native-mock": "~0.3.1",
