--- a/.eslintrc
+++ b/.eslintrc
@@ -24,5 +24,8 @@
   },
   "rules": {
     "react/jsx-filename-extension": 0,
+    "no-param-reassign": 0,
+    "no-use-before-define": 1,
+    "no-underscore-dangle": 0,
   }
 }
