--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "fetch-mock": "^5.5.0",
     "istanbul": "1.0.0-alpha.2",
     "jest": "^21.2.1",
+    "lodash": "^4.17.4",
     "mst-middlewares": "^1.1.0",
     "plop": "^1.7.4",
     "prettier": "^1.7.4",
