--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,25 @@
 language: node_js
+
 node_js:
-  - "6.9"
-  - "7.1"
+  - "8.4"
+
 sudo: false
+
 cache:
   directories:
     - $HOME/.yarn-cache
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
+
 env:
   - NODE_ENV='test'
+
 script:
   - cp env.example.js env.js
   - npm run lint
   - npm test
-  - npm run bundle:ios
+  # - npm run bundle:ios
+
 matrix:
   include:
     - language: android
@@ -25,20 +30,24 @@ matrix:
         - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
       sudo: required
       node_js: false
+
       before_install:
-        - nvm install 7
+        - nvm install 8.4
         - node --version
         - travis_retry curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
         - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
         - travis_retry sudo apt-get update -qq
         - travis_retry sudo apt-get install -y -qq yarn
+
       install:
         - yarn
+
       android:
         components:
           - tools
           - platform-tools
           - build-tools-23.0.1
+          - build-tools-23.0.2
           - android-23
           - build-tools-26.0.1
           - android-26
@@ -48,12 +57,14 @@ matrix:
           - addon-google_apis-google-16
       script:
         - cd android && ./gradlew assembleDebug && ./gradlew assembleRelease
+
+
     - language: objective-c
       os: osx
       osx_image: xcode8.2
       node_js: false
       before_install:
-        - nvm install 7
+        - nvm install 8.4
         - node --version
         - travis_retry npm install -g yarn
         - yarn -version
