--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ script:
   - cp env.example.js env.js
   - npm run lint
   - npm test
+  - npm run coverage
+  - codecov
   # - npm run bundle:ios
 
 matrix:
