--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,21 @@
 language: node_js
-
 node_js:
   - "8.4"
-
+  - "7.1"
 sudo: false
-
 cache:
   directories:
     - $HOME/.yarn-cache
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
-
 env:
   - NODE_ENV='test'
-
 script:
   - cp env.example.js env.js
   - npm run lint
   - npm test
   - npm run coverage
-  - codecov
+  - codecov``
   # - npm run bundle:ios
 
 matrix:
