--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "babel-core": "^6.9.0",
     "babel-eslint": "^8.0.1",
     "babel-jest": "^21.2.0",
+    "babel-plugin-root-import": "^5.1.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.9.0",
     "babel-preset-react-native": "^4.0.0",
