--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
   "version": "1.0.0",
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "android": "react-native run-android",
+    "run:ios": "react-native run-ios",
+    "run:android": "react-native run-android",
+    "bundle": "yarn bundle:ios && yarn bundle:android",
+    "bundle:ios": "node ./node_modules/react-native/local-cli/cli.js bundle --platform ios --entry-file index.js --bundle-output ios/main.jsbundle --dev=false --verbose",
+    "bundle:android": "node ./node_modules/react-native/local-cli/cli.js bundle --platform android --entry-file index.js --bundle-output android/main.jsbundle --dev=false --verbose",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint src test",
