--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-native-button": "^2.1.0",
     "react-native-i18n": "^2.0.9",
     "react-native-router-flux": "^4.0.0-beta.22",
+    "react-native-storage": "^0.2.2",
     "react-native-vector-icons": "^4.4.2",
     "standard-http-error": "^2.0.0",
     "tcomb-form-native": "^0.6.11"
