--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
       "<rootDir>/test/setup.js"
     ],
     "transformIgnorePatterns": [
-      "node_modules/(?!(jest-)?react-native|react-navigation)"
+      "node_modules/(?!(jest-)?react-native|react-navigation|mobx-react)"
     ]
   },
   "dependencies": {
@@ -61,6 +61,8 @@
     "babel-plugin-root-import": "^5.1.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.9.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
     "babel-preset-react-native": "^4.0.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.9.0",
@@ -78,6 +80,7 @@
     "jest": "^21.2.1",
     "jest-fetch-mock": "^1.3.3",
     "lodash": "^4.17.4",
+    "mock-async-storage": "^2.0.2",
     "mst-middlewares": "^1.1.0",
     "plop": "^1.7.4",
     "prettier": "^1.7.4",
